Modified filename construction to run under Linux  Started implementing a better directory choosing dialog

--- a/source/tools/java/MainWindow.form
+++ b/source/tools/java/MainWindow.form
@@ -52,7 +52,7 @@
             </TitledBorder>
           </Border>
         </Property>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.beaninfo.editors.StringEditor" value="c:\"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.beaninfo.editors.StringEditor" value="."/>
       </Properties>
 
       <Events>
