--- a/source/tools/java/MainWindow.form
+++ b/source/tools/java/MainWindow.form
@@ -108,6 +108,10 @@
         <Property name="actionCommand" type="java.lang.String" editor="org.netbeans.beaninfo.editors.StringEditor" value="New"/>
         <Property name="text" type="java.lang.String" editor="org.netbeans.beaninfo.editors.StringEditor" value="New"/>
       </Properties>
+
+      <Events>
+        <EventHandler event="actionPerformed" handler="jButtonNewActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints height="60" width="130" x="380" y="100"/>
