--- a/source/tools/java/UnitEditor.form
+++ b/source/tools/java/UnitEditor.form
@@ -1366,14 +1366,14 @@
             <Property name="columns" type="int" value="4"/>
           </Layout>
         </Container>
-        <Container class="javax.swing.JPanel" name="jPanel2">
+        <Container class="javax.swing.JPanel" name="jPanelPicture">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="not implemented yet" toolTip=""/>
+              <JTabbedPaneConstraints tabName="Picture" toolTip=""/>
             </Constraint>
           </Constraints>
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout"/>
         </Container>
       </SubComponents>
     </Container>
